fix: single-chronicle rewrite + z-index on hero__large

--- a/private/src/styles/pages/page/_hero.scss
+++ b/private/src/styles/pages/page/_hero.scss
@@ -139,6 +139,7 @@
   &.page-hero-block--large {
     .page-hero-title-wrapper {
       top: 22%;
+      z-index: 10;
 
       .container {
         .page-hero-title {
